# test

./: README.md  virustotal-alerts.odt
ci/: opensearch-template-validation.yaml  parser-regression.yaml  sigma-conversion.yaml
collectors/vector/: app-json.toml  syslog-aggregator.toml
data-prepper/patterns/: common.grok  firewall.grok  linux-auth.grok
data-prepper/pipelines/: cloudtrail.yaml  (+7 more)
deploy/: docker-compose.dev.yml
docs/: architecture.md  schema.md  sigma-compatibility.md  source-onboarding.md
normalizer/: pyproject.toml
normalizer/src/siem_normalizer/: __init__.py  classifier.py  envelope.py  normalizer_engine.py  parser_engine.py  registry.py  taxonomy.py  validation.py
normalizer/src/siem_normalizer/mappings/: firewall.yaml  linux_auth.yaml  sigma_aliases.yaml  windows_security.yaml  windows_sysmon.yaml
normalizer/src/siem_normalizer/normalizers/: app_json.py  cloudtrail.py  firewall_traffic.py  linux_auth.py  linux_syslog.py  windows_security.py
normalizer/src/siem_normalizer/parsers/: grok_parser.py  json_parser.py  kv_parser.py  regex_parser.py  syslog_parser.py
normalizer/src/siem_normalizer/schemas/: canonical_event.schema.json  firewall.schema.json  linux_auth.schema.json
normalizer/src/siem_normalizer/utils/: host.py  ip.py  process.py  timestamps.py  users.py
normalizer/tests/: test_classifier.py  test_firewall.py  test_linux_auth.py  test_windows_security.py
normalizer/tests/fixtures/raw/: windows_4688.json
normalizer/tests/golden/: firewall_deny.expected.json  linux_auth_ssh_failed.expected.json  windows_4688.expected.json
(+39 files in other folders)
